objects/pepApplication_Note__c.object
<CustomObject>
    <description>Notes for Applications</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Application Notes</relationshipLabel>
        <relationshipName>Application_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note_Details__c</fullName>
        <label>Note Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the note</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Note</label>
    <nameField>
        <displayFormat>AN-{0000000000}</displayFormat>
        <label>File Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>